[package]
name = "mkr-listen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = [
  "ws",
  "openssl",
] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
serde = "1.0.136"
paris = {version = "1.5", features = []}
#paris = {version = "1.5", features = ["timestamps", "macros"]}

